gdesktopappinfo: Handle g_get_prgname() being NULL

Reported-By: Sebastien Bacher <seb128@ubuntu.com>

https://bugzilla.gnome.org/show_bug.cgi?id=642490